--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,7 +4,8 @@
 # inherit_from:
 #   - enabled.yml
 #   - disabled.yml
-
+Documentation:
+  Enabled: false
 # Common configuration.
 AllCops:
   # Include common Ruby source files.
